# CD_AI_back_end

./: .env.example  .gitignore  DEPENDENCIES.md  PROJECT_STRUCTURE.md  README.md  alembic.ini  database_setup.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/api/v1/: __init__.py  routes.py
app/api/v1/endpoints/: __init__.py  admin.py  ai_review.py  annotations.py  documents.py  groups.py  health.py  notifications.py  papers.py  users.py
app/core/: __init__.py  dependencies.py
app/middleware/: __init__.py  logging.py
app/models/: __init__.py  document.py
app/schemas/: annotation.py  document.py  user.py
app/services/: ai_adapter.py  document.py  oss.py
app/utils/: logger.py
tools/doc_reader/: README.md  __init__.py  cli.py  reader.py
